fix: use min-height 100dvh for hero height on mobile

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -1,5 +1,5 @@
 .main_container {
-    height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
